--- a/app/src/main/res/layout/item_image_list.xml
+++ b/app/src/main/res/layout/item_image_list.xml
@@ -15,8 +15,9 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
             tools:ignore="ContentDescription" />
 
@@ -46,6 +47,15 @@
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/text_size_low_priority_info"
                 tools:text="original size: 1920x1080" />
+
+            <TextView
+                android:id="@+id/link"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:contextClickable="true"
+                android:autoLink="web"
+                android:linksClickable="true"
+                tools:text="http://yandex.ru"/>
 
         </LinearLayout>
     </LinearLayout>
