--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
 
     <color name="colorImagePreview">#D8D8D8</color>
+
+    <color name="simple_image_list_background">#F6F6F6</color>
 </resources>
