--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -9,7 +9,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/searchToolBar">
+        android:layout_above="@+id/searchToolBar"
+        android:background="@color/backgroundColor">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/image_list_rv"
