--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,20 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="vector"
+    android:width="48dp"
+    android:height="48dp"
+    android:viewportWidth="48"
+    android:viewportHeight="48">
+    <group android:name="group">
+        <path
+            android:name="path_1"
+            android:pathData="M 29.726 20.979 C 29.726 19.107 29.138 17.373 28.137 15.95 C 26.714 14.949 24.98 14.361 23.108 14.361 C 21.883 14.361 20.717 14.613 19.658 15.068 C 20.083 14.973 20.525 14.923 20.979 14.923 C 22.651 14.923 24.165 15.601 25.261 16.697 L 27.39 18.826 C 28.486 19.922 29.164 21.436 29.164 23.108 C 29.164 23.556 29.115 23.993 29.023 24.414 C 29.476 23.36 29.726 22.199 29.726 20.979 Z M 26.192 17.895 C 25.288 17.36 24.234 17.053 23.108 17.053 C 19.764 17.053 17.053 19.764 17.053 23.108 C 17.053 24.234 17.36 25.288 17.895 26.192 C 18.799 26.727 19.853 27.035 20.979 27.035 C 24.323 27.035 27.035 24.323 27.035 20.979 C 27.035 19.853 26.727 18.799 26.192 17.895 Z M 14.923 20.979 C 14.923 20.525 14.973 20.083 15.068 19.658 C 14.613 20.717 14.361 21.883 14.361 23.108 C 14.361 24.98 14.949 26.714 15.95 28.137 C 17.373 29.138 19.107 29.726 20.979 29.726 C 22.201 29.726 23.364 29.475 24.42 29.021 C 23.997 29.115 23.558 29.164 23.108 29.164 C 21.436 29.164 19.922 28.486 18.826 27.39 L 16.697 25.261 C 15.601 24.165 14.923 22.651 14.923 20.979 Z M 29.164 30.119 L 29.164 31.178 L 33.763 35.768 L 35.768 33.763 L 31.178 29.164 L 30.113 29.164 L 27.838 26.889 C 27.557 27.241 27.237 27.56 26.886 27.841 Z M 35.892 37.897 L 29.164 31.182 L 28.199 30.217 C 26.766 31.248 25.009 31.855 23.108 31.855 C 20.693 31.855 18.506 30.876 16.923 29.293 L 14.794 27.164 C 13.211 25.581 12.232 23.394 12.232 20.979 C 12.232 16.148 16.148 12.232 20.979 12.232 C 23.394 12.232 25.581 13.211 27.164 14.794 L 29.293 16.923 C 30.876 18.506 31.855 20.693 31.855 23.108 C 31.855 25.008 31.248 26.764 30.215 28.196 L 31.182 29.164 L 37.897 35.892 Z"
+            android:fillColor="#000000"
+            android:strokeWidth="1"/>
+        <path
+            android:name="path_2"
+            android:pathData="M 35.768 33.763 L 33.763 35.768 L 27.035 29.053 L 27.035 27.99 L 26.664 27.62 C 25.137 28.932 23.152 29.726 20.979 29.726 C 16.148 29.726 12.232 25.81 12.232 20.979 C 12.232 16.148 16.148 12.232 20.979 12.232 C 25.81 12.232 29.726 16.148 29.726 20.979 C 29.726 23.152 28.932 25.137 27.613 26.664 L 27.983 27.035 L 29.053 27.035 Z M 27.035 20.979 C 27.035 17.635 24.323 14.923 20.979 14.923 C 17.635 14.923 14.923 17.635 14.923 20.979 C 14.923 24.323 17.635 27.035 20.979 27.035 C 24.323 27.035 27.035 24.323 27.035 20.979 Z"
+            android:fillColor="#deff00"
+            android:strokeWidth="1"/>
+    </group>
 </vector>
