--- a/app/src/main/res/layout/simple_item_image_list.xml
+++ b/app/src/main/res/layout/simple_item_image_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/image"
+<pl.droidsonroids.gif.GifImageView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/gifView"
     android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_height="184dp"
     android:padding="@dimen/cardview_outside_padding"
     android:scaleType="centerCrop"
     android:src="@drawable/ic_launcher_background"
