--- a/app/src/main/res/layout/item_image_list.xml
+++ b/app/src/main/res/layout/item_image_list.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:background="@color/backgroundColor"
+    android:orientation="vertical"
     tools:background="@color/itemOnClickOutSideColor">
 
     <androidx.cardview.widget.CardView
@@ -19,12 +19,29 @@
             android:orientation="vertical"
             android:padding="@dimen/cardview_outside_padding">
 
-            <pl.droidsonroids.gif.GifImageView
-                android:id="@+id/gifView"
+            <FrameLayout
+                android:id="@+id/image_container"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="fitCenter"
-                android:src="@color/colorImagePreview" />
+                android:layout_height="wrap_content">
+
+                <pl.droidsonroids.gif.GifImageView
+                    android:id="@+id/gifView"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="fitCenter"
+                    android:src="@color/colorImagePreview" />
+
+                <ProgressBar
+                    android:id="@+id/image_load_progress_bar"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:max="100"
+                    tools:visibility="visible" />
+
+            </FrameLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -58,11 +75,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autoLink="web"
+                    android:ellipsize="end"
+                    android:linksClickable="true"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:ellipsize="end"
                     android:text="@string/action_open_origin_image"
-                    android:linksClickable="true"
                     tools:contextClickable="true"
                     tools:text="http://yandex.ru" />
 
@@ -71,11 +88,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:autoLink="web"
+                    android:ellipsize="end"
+                    android:linksClickable="true"
                     android:maxLines="1"
                     android:singleLine="true"
-                    android:ellipsize="end"
                     android:text="@string/action_open_origin_image"
-                    android:linksClickable="true"
                     tools:contextClickable="true"
                     tools:text="http://yandex.ru" />
 
@@ -83,12 +100,12 @@
 
             <ProgressBar
                 android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="?android:attr/progressBarStyleHorizontal"
                 android:indeterminateOnly="true"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
         </LinearLayout>
 
@@ -98,10 +115,10 @@
         android:id="@+id/other_image_list_rv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/simple_image_list_background"
         android:orientation="horizontal"
         android:visibility="gone"
-        tools:visibility="visible"
-        android:background="@color/simple_image_list_background"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/simple_item_image_list" />
+        tools:listitem="@layout/simple_item_image_list"
+        tools:visibility="visible" />
 </LinearLayout>
