--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#01618D</color>
 
     <color name="backgroundColor">#19191A</color>
+    <color name="inverseBackgroundColor">#FFFFFF</color>
     <color name="itemOnClickOutSideColor">#363738</color>
     <color name="colorImagePreview">#8c8c8c</color>
 
@@ -15,4 +16,8 @@
 
     <!-- Text colors -->
     <color name="color_error_msg_enter_captcha">#871e1e</color>
+
+    <!-- Button colors -->
+    <color name="colorYellow">#FFB300</color>
+    <color name="colorYellowPressed">#FFCA28</color>
 </resources>
