--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="cardview_inside_padding">8dp</dimen>
     <dimen name="cardview_outside_padding">8dp</dimen>
     <dimen name="cardview_padding_after_image">4dp</dimen>
+    <dimen name="card_button_height">48dp</dimen>
 
     <dimen name="text_size_medium_priority_info">12sp</dimen>
     <dimen name="text_size_low_priority_info">10sp</dimen>
