--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <style name="MainTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="MainTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -18,6 +18,10 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?attr/actionBarSize</item>
         <item name="android:background">@color/colorAccent</item>
+    </style>
+
+    <style name="DialogButton" parent="@android:style/Widget.Holo.Button.Borderless.Small">
+        <item name="android:textColor">@color/inverseBackgroundColor</item>
     </style>
 
 </resources>
